force-app/main/default/objects/AR_Injection_Status__c/AR_Injection_Status__c.object-meta.xml
<CustomObject>
    <label>Injection Status</label>
    <nameField>
        <displayFormat>IS-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Injection Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>