force-app/main/default/objects/AR_Injection_Status__c/fields/AR_FOLLOW_UP_DATE_TRIGGERS__c.field-meta.xml
<CustomField>
    <fullName>AR_FOLLOW_UP_DATE_TRIGGERS__c</fullName>
    <label>FOLLOW UP DATE TRIGGERS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>