force-app/main/default/objects/AR_Injection_Status__c/fields/AR_INSTRUCTIONS__c.field-meta.xml
<CustomField>
    <fullName>AR_INSTRUCTIONS__c</fullName>
    <label>INSTRUCTIONS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>