force-app/main/default/objects/AR_Injection_Status__c/fields/AR_PAY_CLASS_TRANSFER__c.field-meta.xml
<CustomField>
    <fullName>AR_PAY_CLASS_TRANSFER__c</fullName>
    <label>PAY CLASS TRANSFER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>