force-app/main/default/objects/AR_Injection_Status__c/fields/AR_SHORT_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>AR_SHORT_DESCRIPTION__c</fullName>
    <label>SHORT DESCRIPTION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>