force-app/main/default/objects/AR_Injection_Status__c/fields/AR_STATUS_CODES__c.field-meta.xml
<CustomField>
    <fullName>AR_STATUS_CODES__c</fullName>
    <label>STATUS CODES</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACC</fullName>
            </value>
            <value>
                <fullName>UNB</fullName>
            </value>
            <value>
                <fullName>INP</fullName>
            </value>
            <value>
                <fullName>REP</fullName>
            </value>
            <value>
                <fullName>APP</fullName>
            </value>
            <value>
                <fullName>PLN</fullName>
            </value>
            <value>
                <fullName>R-PLN</fullName>
            </value>
            <value>
                <fullName>PLN-REF</fullName>
            </value>
            <value>
                <fullName>PLN-FIN</fullName>
            </value>
            <value>
                <fullName>NCOF</fullName>
            </value>
            <value>
                <fullName>SCS</fullName>
            </value>
            <value>
                <fullName>RSC</fullName>
            </value>
            <value>
                <fullName>OPN</fullName>
            </value>
            <value>
                <fullName>H-ZEL</fullName>
            </value>
            <value>
                <fullName>RUL</fullName>
            </value>
            <value>
                <fullName>PAA</fullName>
            </value>
            <value>
                <fullName>PPR</fullName>
            </value>
            <value>
                <fullName>PSR</fullName>
            </value>
            <value>
                <fullName>FES</fullName>
            </value>
            <value>
                <fullName>ARB</fullName>
            </value>
            <value>
                <fullName>LOP</fullName>
            </value>
            <value>
                <fullName>LOP-N</fullName>
            </value>
            <value>
                <fullName>SPR</fullName>
            </value>
            <value>
                <fullName>LVM</fullName>
            </value>
            <value>
                <fullName>CSP</fullName>
            </value>
            <value>
                <fullName>FTP</fullName>
            </value>
            <value>
                <fullName>INV</fullName>
            </value>
            <value>
                <fullName>MRS</fullName>
            </value>
            <value>
                <fullName>SPB</fullName>
            </value>
            <value>
                <fullName>DME</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>