force-app/main/default/objects/AR_Injection_Status__c/fields/AR_STATUS_MAPPING__c.field-meta.xml
<CustomField>
    <fullName>AR_STATUS_MAPPING__c</fullName>
    <label>STATUS MAPPING</label>
    <length>255</length>
    <type>Text</type>
</CustomField>