force-app/main/default/objects/AR_Injection_Status__c/fields/AR_TEAM_RE_ASSIGNMENT__c.field-meta.xml
<CustomField>
    <fullName>AR_TEAM_RE_ASSIGNMENT__c</fullName>
    <label>TEAM RE-ASSIGNMENT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>