force-app/main/default/objects/AR_Injection_Status__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AR_STATUS_CODES__c</columns>
    <columns>AR_FOLLOW_UP_DATE_TRIGGERS__c</columns>
    <columns>AR_SHORT_DESCRIPTION__c</columns>
    <columns>AR_INSTRUCTIONS__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>